--- a/DAY-4/counterapp/src/app/components/user-profile/user-profile.component.html
+++ b/DAY-4/counterapp/src/app/components/user-profile/user-profile.component.html
@@ -1,1 +1,6 @@
 <p>user-profile works!</p>
+
+<h1>Name:-{{name}}</h1>
+<h1>Age:-{{age}}</h1>
+<h1>Salary:-{{salary}}</h1>
+<h1>Status:-{{status}}</h1>
