Learn Dynamic Funcality

--- a/DAY-4/counterapp/src/app/components/user-profile/user-profile.component.html
+++ b/DAY-4/counterapp/src/app/components/user-profile/user-profile.component.html
@@ -4,3 +4,8 @@
 <h1>Age:-{{age}}</h1>
 <h1>Salary:-{{salary}}</h1>
 <h1>Status:-{{status}}</h1>
+
+
+
+<!-- button disable can be done with dynamically with squre button -->
+<button  [disabled]="isBtndisable">Click Me</button>
