--- a/Day-6/lifecyclemethod/src/app/app.component.html
+++ b/Day-6/lifecyclemethod/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-user-list></app-user-list>
-<button (click)="handleClear()">Clear user</button>
+<!-- <app-user-list></app-user-list> -->
+<!-- <button (click)="handleClear()">Clear user</button> -->
+<app-joke></app-joke>
